# brcl2monorepo

angular/: angular.json
angular/src/: BUILD.bazel  tsconfig.json
angular/src/app/: BUILD.bazel
angular/src/app/hello-world/: BUILD.bazel
angular/src/app/todos/: BUILD.bazel
tools/: angular_ts_project.bzl  typescript.bzl
