load("//tools:angular_ts_project.bzl", "ng_ts_project")

package(default_visibility = ["//:__subpackages__"])

ng_ts_project(
    name = "app",
    srcs = glob(
        include = ["*.ts"],
    ),
    angular_assets = ["app.component.html"],
    deps = [
        "//angular/src/app/hello-world",
        "//angular/src/app/home",
        "//angular/src/app/todos",
        "//angular/src/app/todos/reducers",
        "//angular/src/shared/material",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@angular/service-worker",
        "@npm//@ngrx/store",
        "@npm//rxjs",
    ],
)
